erDiagram
    USERS {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(255) name
        VARCHAR(255) email
        VARCHAR(255) password
        ENUM role
        BIGINT prodi_id FK
        BOOLEAN is_active
    }

    PRODI {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(10) kode_prodi
        VARCHAR(255) nama_prodi
        BIGINT kaprodi_id FK
    }

    PERIODE_AKADEMIK {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(20) tahun_ajaran
        ENUM semester
        BOOLEAN is_active
        VARCHAR(255) start_date
        VARCHAR(255) end_date
    }

    DOSENN {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(50) pegawai_id FK
        VARCHAR(255) nama
        VARCHAR(20) nidn
        VARCHAR(255) email
        VARCHAR(255) nomor_telepon
    }

    JADWAL_DOSEN {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(50) pegawai_id FK
        VARCHAR(20) kode_mk
        VARCHAR(255) nama_mk
        VARCHAR(255) kelas
        ENUM semester
        VARCHAR(20) tahun_ajaran
    }

    KUESIONER_UPLOADS {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT user_id FK
        VARCHAR(500) file_path
        VARCHAR(50) pegawai_id FK
        VARCHAR(20) kode_matakuliah
        JSON extracted_data
        TEXT ai_analysis
    }

    RPS_MONITORING_SNAPSHOTS {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT prodi_id FK
        BIGINT periode_id FK
        JSON snapshot_data
        TIMESTAMP generated_at
    }

    PERKULIAHAN_MONITORING_SNAPSHOTS {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT prodi_id FK
        BIGINT periode_id FK
        JSON snapshot_data
        TIMESTAMP generated_at
    }

    LAPORAN_GJM {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT user_id FK
        BIGINT template_id FK
        VARCHAR(255) jenis_laporan
        VARCHAR(255) judul_laporan
        VARCHAR(255) ai_konten_preview
    }

    LAPORAN_BULANAN {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    TEMPLATE_LAPORAN {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(255) nama_template
        VARCHAR(255) jenis_laporan
        VARCHAR(500) file_path
        BIGINT prodi_id FK
        BOOLEAN is_active
    }

    LAPORAN_GKM {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT user_id FK
        VARCHAR(500) file_path
        VARCHAR(255) jenis_laporan
        VARCHAR(255) tahun
        VARCHAR(255) status
    }

    DOCUMENT_CHUNKS {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT template_id FK
        VARCHAR(255) chunk_index
        TEXT content
        VARCHAR(255) embedding
    }

    EMBEDDINGS_CACHE {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(255) hash
        VARCHAR(255) embedding
        VARCHAR(255) model_name
        TIMESTAMP created_at
    }

    JADWAL_REMINDER {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT user_id FK
        BIGINT prodi_id FK
        VARCHAR(255) jenis_reminder
        VARCHAR(255) jadwal_kirim
        BOOLEAN is_active
    }

    LOG_EMAIL {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT prodi_id FK
        BIGINT reminder_id FK
        VARCHAR(255) recipient
        VARCHAR(255) subject
        VARCHAR(255) status
        TIMESTAMP sent_at
    }

    KIRIM_LAPORAN_HISTORY {
        BIGINT id PK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        VARCHAR(255) sent_by
        VARCHAR(255) laporan_type
        BIGINT laporan_id FK
        VARCHAR(255) recipients
        TIMESTAMP sent_at
    }

    CACHE {
    }

    JOBS {
    }

    USERS }o--|| PRODI : prodi_id
    KUESIONER_UPLOADS }o--|| USERS : user_id
    LAPORAN_GJM }o--|| USERS : user_id
    LAPORAN_BULANAN }o--|| USERS : user_id
    JADWAL_REMINDER }o--|| USERS : user_id
    KIRIM_LAPORAN_HISTORY }o--|| USERS : sent_by
    RPS_MONITORING_SNAPSHOTS }o--|| PRODI : prodi_id
    PERKULIAHAN_MONITORING_SNAPSHOTS }o--|| PRODI : prodi_id
    LAPORAN_BULANAN }o--|| PRODI : prodi_id
    TEMPLATE_LAPORAN }o--|| PRODI : prodi_id
    JADWAL_REMINDER }o--|| PRODI : prodi_id
    LOG_EMAIL }o--|| PRODI : prodi_id
    RPS_MONITORING_SNAPSHOTS }o--|| PERIODE_AKADEMIK : periode_id
    PERKULIAHAN_MONITORING_SNAPSHOTS }o--|| PERIODE_AKADEMIK : periode_id
    JADWAL_DOSEN }o--|| DOSENN : pegawai_id
    LAPORAN_GJM }o--|| TEMPLATE_LAPORAN : template_id
    LAPORAN_BULANAN }o--|| TEMPLATE_LAPORAN : template_id
    DOCUMENT_CHUNKS }o--|| TEMPLATE_LAPORAN : template_id
    LOG_EMAIL }o--|| JADWAL_REMINDER : reminder_id
